Add Matlab Dependency

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -87,13 +87,13 @@ endif ()
 
 find_package(PythonInterp 3)
 find_package(Python REQUIRED)
-find_package(PythonLibs 3.8 REQUIRED)
+find_package(PythonLibs REQUIRED)
 find_package(OpenMP REQUIRED)
-find_package(Eigen3 REQUIRED)
+#find_package(Eigen3 REQUIRED)
 #find_package(OpenCL REQUIRED)
 #find_package(MPI REQUIRED)
-#find_package(netCDF REQUIRED)
-#find_package(Matlab REQUIRED)
+find_package(netCDF REQUIRED)
+find_package(Matlab REQUIRED)
 set(CMAKE_CXX_STANDARD 14)
 
 #if (MPI_FOUND)
@@ -108,7 +108,7 @@ set(CMAKE_CXX_STANDARD 14)
 #
 #endif ()
 include_directories(${PYTHON_INCLUDE_DIRS})
-
+include_directories(${Matlab_INCLUDE_DIRS})
 add_executable(cils main.cpp src/include/config.h)
 
 if (MPI_FOUND)
@@ -121,10 +121,10 @@ if (OpenMP_CXX_FOUND)
     message("-- OpenMP_CXX_FOUND")
 endif ()
 
-#if (netCDF_FOUND)
-#    target_link_libraries(cils ${netCDF_LIBRARIES})
-#    message("-- netCDF_FOUND")
-#endif ()
+if (netCDF_FOUND)
+    target_link_libraries(cils ${netCDF_LIBRARIES})
+    message("-- netCDF_FOUND")
+endif ()
 
 #
 #if (OpenCL_FOUND)
@@ -145,4 +145,16 @@ endif ()
 if (Eigen3_FOUND)
     target_link_libraries(cils Eigen3::Eigen)
     message("-- Eigen3_FOUND")
+endif ()
+
+if (Matlab_FOUND)
+
+    message(STATUS "Linking UNIX C++")
+    target_link_libraries(cils ${Matlab_ROOT_DIR}/extern/bin/glnxa64/libMatlabEngine.so)
+    target_link_libraries(cils ${Matlab_ROOT_DIR}/extern/bin/glnxa64/libMatlabDataArray.so)
+
+#    find_package(Threads)
+#    target_link_libraries(cils ${CMAKE_THREAD_LIBS_INIT})
+#    target_link_libraries(cils ${Matlab_LIBRARIES})
+    message("-- Matlab_FOUND ${PROJECT_NAME} ${Matlab_LIBRARIES}")
 endif ()
