--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -109,7 +109,7 @@ set(CMAKE_CXX_STANDARD 14)
 #endif ()
 include_directories(${PYTHON_INCLUDE_DIRS})
 include_directories(${Matlab_INCLUDE_DIRS})
-add_executable(cils src/include/rtwtypes.h src/include/rt_nonfinite.h main.cpp src/include/config.h  )
+add_executable(cils src/include/rtwtypes.h src/include/rt_nonfinite.h main.cpp src/include/config.h src/include/coder_utils.h)
 
 if (MPI_FOUND)
     target_link_libraries(cils ${MPI_LIBRARIES})
