--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -85,68 +85,27 @@ elseif (CXX_COMPILER_CRAY)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -hlist=a -hreport=fisv")
 endif ()
 
-find_package(PythonInterp 3)
-find_package(Python REQUIRED)
-find_package(PythonLibs REQUIRED)
+find_package(Python3 COMPONENTS Interpreter NumPy)
 find_package(OpenMP REQUIRED)
-#find_package(Eigen3 REQUIRED)
-#find_package(OpenCL REQUIRED)
-#find_package(MPI REQUIRED)
-find_package(netCDF REQUIRED)
 find_package(Matlab REQUIRED)
 set(CMAKE_CXX_STANDARD 14)
 
-#if (MPI_FOUND)
-#    include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
-#    if(SLURM)
-#        set(MPIEXEC "srun")
-#        set(MPIOPTS "--cpu-bind=cores")
-#    else()
-#        set(MPIEXEC "mpirun")
-#        set(MPIOPTS "")
-#    endif(SLURM)
-#
-#endif ()
-include_directories(${PYTHON_INCLUDE_DIRS})
+include_directories(${Python3_INCLUDE_DIRS})
 include_directories(${Matlab_INCLUDE_DIRS})
 
 add_executable(cils src/include/rtwtypes.h src/include/rt_nonfinite.h main.cpp src/include/config.h src/include/coder_utils.h)
 
-if (MPI_FOUND)
-    target_link_libraries(cils ${MPI_LIBRARIES})
-    message("-- MPI_FOUND")
-endif ()
+if (Python3_NumPy_FOUND)
+    message("-- Python3_NumPy_FOUND")
+endif()
 
-if (OpenMP_CXX_FOUND)
-    target_link_libraries(cils OpenMP::OpenMP_CXX)
-    message("-- OpenMP_CXX_FOUND")
-endif ()
-
-if (netCDF_FOUND)
-    target_link_libraries(cils ${netCDF_LIBRARIES})
-    message("-- netCDF_FOUND")
-endif ()
-
-#
-#if (OpenCL_FOUND)
-#    target_link_libraries(cils ${OPENCL_LIBRARIES})
-#    message("-- OpenCL_FOUND")
-#endif ()
-#
-#if (LAPACK_FOUND)
-#    target_link_libraries(cils ${LAPACK_LIBRARIES})
-#    message("-- LAPACK_FOUND")
-#endif ()
-
-if (Python_FOUND)
-    set(Python_NumPy_INCLUDE_DIR "${PYTHON_INCLUDE_DIRS}")
-    target_link_libraries(cils ${PYTHON_LIBRARIES})
-    message("-- Python_FOUND ${PYTHON_INCLUDE_DIRS} ${PYTHON_LIBRARIES} ${Python_NumPy_INCLUDE_DIR}")
-endif ()
-
-if (Eigen3_FOUND)
-    target_link_libraries(cils Eigen3::Eigen)
-    message("-- Eigen3_FOUND")
+if (Python3_FOUND)
+    message("-- Python3_Interpreter_FOUND ${Python3_Interpreter_FOUND}")
+    message("-- Python3_EXECUTABLE ${Python3_EXECUTABLE}")
+    message("-- Python3_SITELIB ${Python3_SITELIB}")
+    message("-- Python3_LIBRARIES ${Python3_LIBRARIES}")
+    target_link_libraries(cils ${Python3_LIBRARIES})
+    message("-- Python3_FOUND ${Python3_INCLUDE_DIRS} ${PYTHON3_LIBRARIES} ${Python3_NumPy_INCLUDE_DIR}")
 endif ()
 
 if (Matlab_FOUND)
