1. Add cils_init_point.cpp and cils_underdetermined_test.cpp. 2. Complete SIC and QRP init point method - serial. 3. Change the QR method in reduction for underdetermined system.

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -96,7 +96,7 @@ include_directories(${Python3_NumPy_INCLUDE_DIR})
 include_directories(${Matlab_INCLUDE_DIRS})
 
 find_library(reduction_lib reduction REQUIRED)
-add_executable(cils main.cpp src/include/config.h src/include/coder_utils.h)
+add_executable(cils main.cpp src/include/config.h src/include/helper.h)
 target_link_libraries(cils ${reduction_lib})
 message("-- reduction ${reduction_lib}")
 
