1. OpenMP version works now. 2. Algorithm changed.

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -88,6 +88,7 @@ endif ()
 find_package(Python3 COMPONENTS Interpreter NumPy)
 find_package(OpenMP REQUIRED)
 find_package(Matlab REQUIRED)
+find_package(MPI)
 set(CMAKE_CXX_STANDARD 20)
 
 include_directories(${Python3_INCLUDE_DIRS})
@@ -96,7 +97,7 @@ include_directories(${Python3_NumPy_INCLUDE_DIR})
 include_directories(${Matlab_INCLUDE_DIRS})
 
 find_library(reduction_lib reduction REQUIRED)
-add_executable(cils main.cpp src/include/config.h src/include/helper.h)
+add_executable(cils main.cpp src/include/config.h)
 target_link_libraries(cils ${reduction_lib})
 message("-- reduction ${reduction_lib}")
 
@@ -119,13 +120,20 @@ if (Matlab_FOUND)
     message(STATUS "Linking UNIX C++")
     target_link_libraries(cils ${Matlab_ROOT_DIR}/extern/bin/glnxa64/libMatlabEngine.so)
     target_link_libraries(cils ${Matlab_ROOT_DIR}/extern/bin/glnxa64/libMatlabDataArray.so)
-
-    #    find_package(Threads)
-    #    target_link_libraries(cils ${CMAKE_THREAD_LIBS_INIT})
-    #    target_link_libraries(cils ${Matlab_LIBRARIES})
     message("-- Matlab_FOUND ${PROJECT_NAME} ${Matlab_LIBRARIES}")
 endif ()
 
+if (MPI_FOUND)
+    include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
+    if(SLURM)
+        set(MPIEXEC "srun")
+        set(MPIOPTS "--cpu-bind=cores")
+    else()
+        set(MPIEXEC "mpirun")
+        set(MPIOPTS "")
+    endif(SLURM)
+    message("-- MPI_FOUND")
+endif ()
 
 #message("-- reduction PRIVATE ${reduction_lib}")
 #cd ~/babai_asyn/babai_asyn_c++/ && cd build  && git pull && cmake .. -D Python3_NumPy_INCLUDE_DIR=/cvmfs/soft.computecanada.ca/easybuild/software/2020/avx2/Core/scipy-stack/2020b/lib/python3.8/site-packages/numpy/core/include/ && make -j 4 && cp cils ~/scratch/cils && cd ~/scratch/ && sbatch job_script_LLL.sh
