--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -91,15 +91,28 @@ find_package(Matlab REQUIRED)
 find_package(MPI)
 set(CMAKE_CXX_STANDARD 20)
 
+if (MPI_FOUND)
+    include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
+    if (SLURM)
+        set(MPIEXEC "srun")
+        set(MPIOPTS "--cpu-bind=cores")
+    else ()
+        set(MPIEXEC "mpirun")
+        set(MPIOPTS "")
+    endif (SLURM)
+    message("-- MPI_FOUND")
+endif ()
+
 include_directories(${Python3_INCLUDE_DIRS})
 include_directories(${Python3_NumPy_INCLUDE_DIR})
 #include_directories(/cvmfs/soft.computecanada.ca/easybuild/software/2020/avx2/Core/scipy-stack/2020b/lib/python3.8/site-packages/numpy/core/include/)
 include_directories(${Matlab_INCLUDE_DIRS})
-
-find_library(reduction_lib reduction REQUIRED)
+SET(CMAKE_CXX_COMPILER mpicxx)
 add_executable(cils main.cpp src/include/config.h)
-target_link_libraries(cils ${reduction_lib})
-message("-- reduction ${reduction_lib}")
+target_include_directories(cils PRIVATE ${MPI_CXX_INCLUDE_PATH})
+target_compile_options(cils PRIVATE ${MPI_CXX_COMPILE_FLAGS})
+target_link_libraries(cils ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
+
 
 if (Python3_NumPy_FOUND)
     message("-- Python3_NumPy_FOUND ${Python3_NumPy_INCLUDE_DIR}")
@@ -123,17 +136,7 @@ if (Matlab_FOUND)
     message("-- Matlab_FOUND ${PROJECT_NAME} ${Matlab_LIBRARIES}")
 endif ()
 
-if (MPI_FOUND)
-    include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
-    if(SLURM)
-        set(MPIEXEC "srun")
-        set(MPIOPTS "--cpu-bind=cores")
-    else()
-        set(MPIEXEC "mpirun")
-        set(MPIOPTS "")
-    endif(SLURM)
-    message("-- MPI_FOUND")
-endif ()
+
 
 #message("-- reduction PRIVATE ${reduction_lib}")
 #cd ~/babai_asyn/babai_asyn_c++/ && cd build  && git pull && cmake .. -D Python3_NumPy_INCLUDE_DIR=/cvmfs/soft.computecanada.ca/easybuild/software/2020/avx2/Core/scipy-stack/2020b/lib/python3.8/site-packages/numpy/core/include/ && make -j 4 && cp cils ~/scratch/cils && cd ~/scratch/ && sbatch job_script_LLL.sh
