--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -89,26 +89,26 @@ find_package(Python3 COMPONENTS Interpreter NumPy)
 find_package(OpenMP REQUIRED)
 find_package(Matlab REQUIRED)
 find_package(Boost REQUIRED)
-find_package(MPI)
+#find_package(MPI)
 set(CMAKE_CXX_STANDARD 20)
 
-if (MPI_FOUND)
-    include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
-    if (SLURM)
-        set(MPIEXEC "srun")
-        set(MPIOPTS "--cpu-bind=cores")
-    else ()
-        set(MPIEXEC "mpirun")
-        set(MPIOPTS "")
-    endif (SLURM)
-    message("-- MPI_FOUND")
-endif ()
+#if (MPI_FOUND)
+#    include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
+#    if (SLURM)
+#        set(MPIEXEC "srun")
+#        set(MPIOPTS "--cpu-bind=cores")
+#    else ()
+#        set(MPIEXEC "mpirun")
+#        set(MPIOPTS "")
+#    endif (SLURM)
+#    message("-- MPI_FOUND")
+#endif ()
 
 include_directories(${Python3_INCLUDE_DIRS})
 include_directories(${Python3_NumPy_INCLUDE_DIR})
 #include_directories(/cvmfs/soft.computecanada.ca/easybuild/software/2020/avx2/Core/scipy-stack/2020b/lib/python3.8/site-packages/numpy/core/include/)
 include_directories(${Matlab_INCLUDE_DIRS})
-SET(CMAKE_CXX_COMPILER mpicxx)
+#SET(CMAKE_CXX_COMPILER mpicxx)
 add_executable(cils main.cpp src/include/config.h)
 target_include_directories(cils PRIVATE ${MPI_CXX_INCLUDE_PATH})
 target_compile_options(cils PRIVATE ${MPI_CXX_COMPILE_FLAGS})
