Modify cils_LLL_test.cpp and plot_lll.py

--- a/babai_asyn_c++/CMakeLists.txt
+++ b/babai_asyn_c++/CMakeLists.txt
@@ -17,44 +17,16 @@ if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCH
             message(SEND_ERROR "C and C++ compilers should match!")
         endif ()
     endif ()
-elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
-    set(CXX_COMPILER_INTEL TRUE)
-    message(STATUS "Intel C++ compiler detected")
-    if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "Intel"))
-        message(SEND_ERROR "C and C++ compilers should match!")
-    endif ()
-elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Cray")
-    set(CXX_COMPILER_CRAY TRUE)
-    message(STATUS "Cray C++ compiler detected")
-    if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "Cray"))
-        message(SEND_ERROR "C and C++ compilers should match!")
-    endif ()
-elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "PGI")
-    set(CXX_COMPILER_PGI TRUE)
-    message(STATUS "PGI C++ compiler detected")
-    if (NOT ("${CMAKE_C_COMPILER_ID}" MATCHES "PGI"))
-        message(SEND_ERROR "C and C++ compilers should match!")
-    endif ()
 else ()
     message(SEND_ERROR "Could not identify compiler!")
 endif ()
 
 # Basic options
 if (CXX_COMPILER_GNUCLANG OR CXX_COMPILER_INTEL)
-    set(CMAKE_CXX_FLAGS "-std=c++14")
-    set(CMAKE_C_FLAGS "-std=c11")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-elseif (CXX_COMPILER_PGI)
-    set(CMAKE_CXX_FLAGS "-std=c++14")
-    set(CMAKE_C_FLAGS "-std=c11")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
-elseif (CXX_COMPILER_CRAY)
-    set(CMAKE_CXX_FLAGS "-h std=c++14 -h error_on_warning")
-    set(CMAKE_C_FLAGS "-h std=c11 -h error_on_warning")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g -O1")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
+    set(CMAKE_CXX_FLAGS "-std=c++17")
+    set(CMAKE_C_FLAGS "-std=c17")
+    set(CMAKE_CXX_FLAGS_DEBUG "-O0")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O0")
 endif ()
 
 # to compile with OpenMP
@@ -74,45 +46,18 @@ else ()
     message(SEND_ERROR "Don't know OpenMP flag for this compiler!")
 endif ()
 
-# set verbosity options
-if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopt-info-inline-vec-optimized-missed=optimizations.info")
-elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Rpass=inline,vectorize")
-elseif (CXX_COMPILER_INTEL)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopt-report=5 -qopt-report-phase=cg,loop,vec,openmp")
-elseif (CXX_COMPILER_CRAY)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -hlist=a -hreport=fisv")
-endif ()
 
 find_package(Python3 COMPONENTS Interpreter NumPy)
 find_package(OpenMP REQUIRED)
 find_package(Matlab REQUIRED)
 find_package(Boost REQUIRED)
 #find_package(MPI)
-set(CMAKE_CXX_STANDARD 20)
-
-#if (MPI_FOUND)
-#    include_directories(${MPI_C_INCLUDE_PATH} ${MPI_CXX_INCLUDE_PATH})
-#    if (SLURM)
-#        set(MPIEXEC "srun")
-#        set(MPIOPTS "--cpu-bind=cores")
-#    else ()
-#        set(MPIEXEC "mpirun")
-#        set(MPIOPTS "")
-#    endif (SLURM)
-#    message("-- MPI_FOUND")
-#endif ()
+set(CMAKE_CXX_STANDARD 17)
 
 include_directories(${Python3_INCLUDE_DIRS})
 include_directories(${Python3_NumPy_INCLUDE_DIR})
-#include_directories(/cvmfs/soft.computecanada.ca/easybuild/software/2020/avx2/Core/scipy-stack/2020b/lib/python3.8/site-packages/numpy/core/include/)
 include_directories(${Matlab_INCLUDE_DIRS})
-#SET(CMAKE_CXX_COMPILER mpicxx)
-add_executable(cils main.cpp src/include/config.h)
-target_include_directories(cils PRIVATE ${MPI_CXX_INCLUDE_PATH})
-target_compile_options(cils PRIVATE ${MPI_CXX_COMPILE_FLAGS})
-target_link_libraries(cils ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
+add_executable(cils main.cpp)
 
 
 if (Python3_NumPy_FOUND)
